# findings

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  nginx.conf
.github/workflows/: publish.yml
public/: tailwind.css
public/data/: findings.txt
src/: main.rs
